--- a/SOEN6441 Project/SOEN 6441 Project.ipynb
+++ b/SOEN6441 Project/SOEN 6441 Project.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "    return connection\n",
     "\n",
-    "server = server_connection('localhost', 'root', '#Snroshan1998')"
+    "server = server_connection('localhost', 'root', '#ManuRana007$')"
    ]
   },
   {
@@ -494,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
