added a missing module

--- a/SOEN6441 Project/SOEN 6441 Project.ipynb
+++ b/SOEN6441 Project/SOEN 6441 Project.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "    return connection\n",
     "\n",
-    "server = server_connection('localhost', 'root', '#ManuRana007$')"
+    "server = server_connection('localhost', 'root', 'abcd')"
    ]
   },
   {
